test/sema/resolution_error.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: function 'foo' has invalid 'custom' type
fn foo() -> custom {}

fn main() -> void {}
